# partition-learner

./: Cargo.toml
src/: main.rs  partition.rs
src/midi/: input.rs  mod.rs  output.rs
